# hwdict

./: .gitignore  README.md  hwdict.cabal
app/: Main.hs
src/Data/: HWDict.hs
src/Data/HWDict/: Entry.hs
