name:                hwdict
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/23ua/hwdict
license:             GPL-3
license-file:        LICENSE
author:              23ua
maintainer:          artefacter@gmail.com
copyright:           2017 23ua
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.HWDict
                     , Data.HWDict.Entry
  build-depends:       base >= 4.7 && < 5
                     , xml
                     , binary
  default-language:    Haskell2010

executable hwdict
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hwdict
                     , optparse-applicative
                     , binary
                     , bytestring
  default-language:    Haskell2010

test-suite hwdict-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hwdict
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/23ua/hwdict
